--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8080
 HOST=localhost
-DB_DRIVER=
-DB_URL=
+DB_DRIVER="postgres"
+DB_URL="postgresql://postgres:password@localhost:5432/gotodo?sslmode=disable"
