--- a/app.env
+++ b/app.env
@@ -2,3 +2,5 @@ PORT=8080
 HOST=localhost
 DB_DRIVER="postgres"
 DB_URL="postgresql://postgres:password@localhost:5432/gotodo?sslmode=disable"
+SYMMETRIC_KEY=12345678901234567890123456789012
+TOKEN_DURATION=15m
